# eso-addons

./: .env  .gitignore  Cargo.toml  README.md  cargo-sources.json  check.sh  com.arviceblot.eso-addon-manager.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: version_template.md
.github/problem-matchers/: clippy.json  rustc.json  rustfmt.json  test.json
.github/workflows/: release.yml  rust.yml
api/: Cargo.toml
api/src/: errors.rs  lib.rs  models.rs
bbcode/: Cargo.toml
bbcode-egui/: Cargo.toml
bbcode-egui/src/: decode.rs  ir.rs  lib.rs  render.rs  sanitize.rs  style.rs
bbcode/src/: lexer.rs  lib.rs  parser.rs  sexp.rs
build-flatpak/: README.md
cli/: Cargo.toml
cli/src/: add.rs  clean.rs  errors.rs  lib.rs  list.rs  main.rs  remove.rs  search.rs  show.rs  update.rs
components/Cards/: CardProfile.tsx  CardTable.js
components/Dropdowns/: UserDropdown.js
components/Footers/: Footer.js
components/Navbars/: AuthNavbar.js  IndexNavbar.js  MainNavbar.tsx
components/Sidebar/: Sidebar.js
core/: Cargo.toml
core/src/: addons.rs  api.rs  config.rs  error.rs  htmlparser.rs  lib.rs  service.rs
core/src/service/: backup.rs  fs_util.rs  mod.rs  result.rs
data/: com.arviceblot.eso-addon-manager.desktop  com.arviceblot.eso-addon-manager.metainfo.xml  com.arviceblot.eso_addon_manager.metainfo.xml  eso-addon-manager.desktop
docs/: build-appimage.md  build-flatpak.md
entity/: Cargo.toml  README.md
entity/src/: addon.rs  addon_dependency.rs  addon_detail.rs  addon_dir.rs  addon_image.rs  category.rs  category_parent.rs  game_compatibility.rs  installed_addon.rs  lib.rs  manual_dependency.rs  mod.rs  prelude.rs
layouts/: Main.js  Main.tsx
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230208_165547_add_categories.rs  m20230302_100852_addon_detail_version.rs  m20230519_153409_manual_deps.rs  m20240212_164739_update_0_category.rs  m20240214_174800_add_game_version.rs  m20240219_192429_add_addon_images.rs
old/: README.md
pages/: _app.tsx  index.tsx
scripts/: build-appimage.sh  get_missing_dep_options.sql  smoke-appimage.sh  smoke-deps.sh
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/views/: addon_details.rs  author.rs  browse.rs  errors.rs  installed.rs  missing_deps.rs  mod.rs  onboard.rs  search.rs  settings.rs  ui_helpers.rs
styles/: globals.css
tests/: manager.rs
tools/: Cargo.toml
ui-egui/: Cargo.toml
ui-egui/src/: main.rs
ui-gtk4/: Cargo.toml  build.rs
ui-gtk4/resources/: resources.gresource.xml  window.ui
ui-gtk4/src/: config.rs  main.rs
ui-gtk4/src/window/: imp.rs  mod.rs
