[package]
name = "eso-addon-manager"
version = "0.4.13"
authors = [
    "arviceblot <github@relay.arviceblot.com>",
    "Damian Czaja <trojan295@protonmail.com>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/arviceblot/eso-addons"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[workspace]
members = [".", "core", "entity", "migration"]

[[bin]]
name = "eso-addon-manager"
path = "src/main.rs"

[package.metadata.appimage]
auto_link = true
auto_link_exclude_list = ["libc.so*", "libdl.so*", "libpthread.so*"]
args = [
    "-u",
    "gh-releases-zsync|arviceblot|eso-addons|latest|eso-addon-manager-*x86_64.AppImage.zsync",
]

[dependencies]
eframe = "0.32.0"
tokio = { version = "1.45.1", features = ["full"] }
eso-addons-core = { version = "0.1.2", path = "./core" }
strum = "0.27.1"
strum_macros = "0.27.1"
lazy_async_promise = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
rfd = "0.15.4"
hostname = "0.4.0"
serde = "1.0.219"
