[package]
name = "eso-addons-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["gzip", "json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
eso-addons-core = { path = "../core"}
