[package]
name = "eso-addons-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive", "cargo"] }
dirs = "4.0"
prettytable-rs = "^0.8"
requestty = "0.3"
colored = "2"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
eso-addons-api = { path = "../api"}
eso-addons-core = { path = "../core"}
migration = { path = "../migration" }