[package]
name = "eso-addons-core"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
serde_derive = "1.0"
serde_json = "1.0.140"
dirs = "6.0.0"
regex = "1.11.1"
scraper = "0.22.0"
tempfile = "3.19.0"
requestty = "0.5"
colored = "3"
prettytable-rs = "^0.10"
walkdir = "2"
toml = "0.8.13"
reqwest = { version = "0.12.19", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
tokio = { version = "1.44.2", features = ["full"] }
snafu = { version = "0.8.5", features = ["backtrace"] }
zip = "2.3.0"
sea-orm = { version = "1.1.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "../migration" }
entity = { path = "../entity" }
tracing = "0.1.41"
chrono = "0.4.40"
lazy_async_promise = "0.6.0"
bbcode-tagger = "0.2.0"
md-5 = "0.10.6"
