[package]
name = "eso-addons-core"
version = "0.1.2"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
serde_derive = "1.0"
serde_json = "1.0.149"
dirs = "6.0.0"
regex = "1.12.3"
scraper = "0.26.0"
tempfile = "3.27.0"
requestty = "0.6.3"
colored = "3"
walkdir = "2"
toml = "1.1.0"
reqwest = { version = "0.12.28", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
] }
tokio = { version = "1.51.0", features = ["full"] }
snafu = { version = "0.9.0", features = ["backtrace"] }
zip = "8.5.1"
sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "../migration" }
entity = { path = "../entity" }
tracing = "0.1.44"
chrono = "0.4.44"
lazy_async_promise = "0.6.0"
bbcode-tagger = "0.2.0"
md-5 = "0.11.0"
version-compare = "0.2.1"
eso_addon_manifest = "0.1.5"
