[package]
name = "eso-addon-manager"
version = "0.3.1"
description = "Cross-platform tool for managing addons for The Elder Scrolls Online"
authors = ["Logan Sales <logan@arviceblot.com>", "Damian Czaja <trojan295@protonmail.com>"]
license = "MIT"
repository = "https://github.com/arviceblot/eso-addons"
default-run = "eso-addon-manager"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["api-all", "cli"] }
dirs = "4.0"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
eso-addons-core = { path = "../core" }
migration = { path = "../migration" }
entity = { path = "../entity" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
