[package]
name = "eso-addon-manager"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/arviceblot/eso-addons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
tokio = { version = "1", features = ["full"] }
eso-addons-core = { path = "../core" }
strum = "0.24.1"
strum_macros = "0.24.3"
